# scrapper

./: .gitignore  README.md  kenyalaw.py  kenyalaw2.py  kenyalaw_requests.py  pineconeupsertion.py  pyproject.toml  requirements.txt
